--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,19 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+    <filter-name>SideLineFilter</filter-name>
+    <filter-class>com.sideline.filter.SideLineFilter</filter-class>
+    <init-param>
+      <param-name>noPath</param-name>
+      <param-value>index.jsp;resister.jsp;appeal.jsp;HomePage.css;LoginServlet;ResisterServlet;ImageServlet;staticFile</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>SideLineFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <listener>
+    <listener-class>com.sideline.listener.MySqlListener</listener-class>
+  </listener>
 </web-app>
